# tester

./: .deepsource.toml
krita-build/: Dockerfile  Makefile  README.md
krita/benchmarks/data/: AutoBrush_70px_rotated.kpp  BIG_TESTING.kpp  autobrush_300px.kpp  colorsmudge.kpp  deform-default.kpp  dyna301.kpp  experimental.kpp  hairy-70px.kpp  hairy30inkDepletion1.kpp  hairybrush_thesis30px1.kpp  hairybrush_thesis30px_antialiasing1.kpp  hairybrush_thesis30px_density301.kpp  load_test.kra  roundmarker05px.kpp  roundmarker40px.kpp  slow-smudge.kpp  softbrush-300px.kpp  softbrush-70px.kpp  softbrush_30px.kpp  softbrush_30px_full.kpp  softbrush_opacity1.kpp  softbrush_softness1.kpp  spray_21_textures1.kpp  spray_30px21rasterParticles.kpp  spray_scaled2rasterParticles.kpp  spray_wu_pixels1.kpp
krita/krita/: CMakeLists.txt  krita5.xmlgui  main.cc
krita/libs/ui/: CMakeLists.txt  KisMainWindow.cpp  KisWelcomePageWidget.cpp  KisWelcomePageWidget.h  kis_splash_screen.cpp
krita/libs/ui/ext_dev/: CMakeLists.txt  extglobal.cpp  extglobal.h  extmainframe.cpp  extmainframe.h  extres.qrc  main.cpp
krita/libs/ui/ext_dev/Gallery/: gallerywidget.cpp  gallerywidget.h  gallerywidget.ui
krita/libs/ui/ext_dev/HSBColorPicker/: hsbcolorpicker.cpp  hsbcolorpicker.h  hsbcolorringpicker.cpp  hsbcolorringpicker.h  hsbcolorsliderpicker.cpp  hsbcolorsliderpicker.h  selectcolorwidget.cpp  selectcolorwidget.h
krita/libs/ui/ext_dev/PaintWidget/: lefttool.cpp  lefttool.h  lefttool.ui  paintwidget.cpp  paintwidget.h  paintwidget.ui
krita/libs/ui/ext_dev/QtAwesome/: CMakeLists.txt
krita/libs/ui/ext_dev/ResExt/新建文件夹/: 1.bat
krita/libs/ui/ext_dev/Utils/: qttoolbuttonex.cpp  qttoolbuttonex.h  qttools.cpp  qttools.h
krita/packaging/macos/: KritaIcon.icns
(+175 files in other folders)
